--- a/complete/src/main/resources/templates/greeting.html
+++ b/complete/src/main/resources/templates/greeting.html
@@ -5,6 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<p>And this is the <b>resources/templates/greetings.html</b> file ... I'm a thymeleaf template.</p>
+
 <p th:text="'Hello, ' + ${name} + '!'" />
+
+<p th:text="${message}" />
 </body>
 </html>
