--- a/complete/src/main/resources/templates/greeting.html
+++ b/complete/src/main/resources/templates/greeting.html
@@ -1,14 +1,20 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Getting Started: Serving Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
+
+<header th:insert="general.html :: headerfiles"> </header>
 <body>
+
+<header th:insert="general.html :: header"> </header>
+
 <p>And this is the <b>resources/templates/greetings.html</b> file ... I'm a thymeleaf template.</p>
 
 <p th:text="'Hello, ' + ${name} + '!'" />
 
 <p th:text="${message}" />
+
+<header th:insert="general.html :: footer"> </header>
+
 </body>
+
+
 </html>
