template de fragments general.html

--- a/complete/src/main/resources/templates/general.html
+++ b/complete/src/main/resources/templates/general.html
@@ -16,10 +16,10 @@
 <div class="another">This is another sidebar</div>
 <footer th:fragment="footer">
     This is a footer
-    <a th:href="@{/fragments}">Fragments Index</a> |
-    <a th:href="@{/markup}">Markup inclussion</a> |
-    <a th:href="@{/params}">Fragment params</a> |
-    <a th:href="@{/other}">Other</a>
+    <a th:href="@{/}">Home</a> |
+    <a th:href="@{/greeting}">Greeting</a> |
+    <a th:href="@{/books}">Books</a>
+    <a th:href="@{/genres}">Genre</a>
 
 </footer>
 </body>
