--- a/complete/src/main/resources/templates/index.html
+++ b/complete/src/main/resources/templates/index.html
@@ -11,19 +11,20 @@ This is the <b>resources/templates/index.html</b> template. In this application 
 
 <h2>Web App</h2>
 <p>You can see a thymeleaf template <a href="/greeting">here</a></p>
+<p><a href="/books/">books</a></p>
 
 <h2>REST API</h2>
 
-<p><a href="/admin/insertData/">/insertData</a></p>
-<p><a href="/admin/retrieveData/">/retrieveData</a></p>
-<p><a href="/admin/deleteData/">/deleteData</a></p>
-<p><a href="/genres/">genres</a></p>
-<p><a href="/genres/7">generes/7</a></p>
+<p><a href="/rest/admin/insertData/">/insertData</a></p>
+<p><a href="/rest/admin/retrieveData/">/retrieveData</a></p>
+<p><a href="/rest/admin/deleteData/">/deleteData</a></p>
+<p><a href="/rest/genres/">genres</a></p>
+<p><a href="/rest/genres/7">generes/7</a></p>
 <p><a href="/books/">books</a></p>
-<p><a href="/books/11">books/11</a></p>
-<p><a href="/books/genre/Scy-fi">books/genre/Scy-fi</a></p>
-<p><a href="/customers/">customers</a></p>
-<p><a href="/customers/1">customers/1</a></p>
+<p><a href="/rest/books/11">books/11</a></p>
+<p><a href="/rest/books/genre/Scy-fi">books/genre/Scy-fi</a></p>
+<p><a href="/rest/customers/">customers</a></p>
+<p><a href="/rest/customers/1">customers/1</a></p>
 <p></p>
 
 <div th:replace="/general.html :: footer"></div>
