--- a/complete/src/main/resources/templates/book.html
+++ b/complete/src/main/resources/templates/book.html
@@ -5,12 +5,10 @@
 <body>
 
 <header th:insert="general.html :: header"> </header>
-
-<p>And this is the <b>resources/templates/greetings.html</b> file ... I'm a thymeleaf template.</p>
-
-<p th:text="'Hello, ' + ${name} + '!'" />
-
-<p th:text="${message}" />
+<h2>Book: </h2>
+<p th:text="${book.id}"/>
+<p th:text="${book.name}"/>
+<p th:text="${book.genre.name}"/>
 
 <header th:insert="general.html :: footer"> </header>
 
