Formulari en thymleaf i enviament del form i save de la entitat (book.html ==> BoocController)

--- a/complete/src/main/resources/templates/books.html
+++ b/complete/src/main/resources/templates/books.html
@@ -23,7 +23,7 @@
     <tr th:each="book: ${books}">
         <td th:text="${book.id}"/>
         <td>
-            <a th:href="@{'/book/' + ${book.id}}" th:text="${book.name}"></a>
+            <a th:href="@{'/books/' + ${book.id}}" th:text="${book.name}"></a>
         </td>
         <td>
             <a th:href="@{'/genre/' + ${book.genre.id}}" th:text="${book.genre.name}"></a>
