bootstrap  i fer-ho una mica més bonic

--- a/complete/src/main/resources/templates/general.html
+++ b/complete/src/main/resources/templates/general.html
@@ -17,7 +17,7 @@
 <footer th:fragment="footer">
     This is the footer fragment
     <a th:href="@{/}">Home</a> |
-    <a th:href="@{/greeting}">Greeting</a> |
+    <a th:href="@{/about}">Greeting</a> |
     <a th:href="@{/rest/admin/insertData/}">Data</a>  |
     <a th:href="@{/rest/books/}">Books</a>  |
     <a th:href="@{/rest/genres/}">Genre</a>  |
