--- a/complete/src/main/resources/templates/index.html
+++ b/complete/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <main role="main" class="container">
 
     <div class="starter-template">
-        <h1>spring starter template app</h1>
+        <h1>springboot starter template app</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> This is a basic app with customers, books and genres entities.</p>
 
         <div class="card-deck mb-3 text-center">
@@ -24,13 +24,13 @@
                         <li>The <a href="/books/">book list</a> here</li>
                         <li>Or you can create <a href="/books/new">new book</a> or <a href="/genres/new">new genre</a></li>
                     </ul>
-                    <a class="btn btn-lg btn-block btn-primary" href="/login" role="button">You will need to login</a>
+                    <a class="btn btn-lg btn-block btn-primary" href="/login" role="button">Login here</a>
 
                 </div>
             </div>
             <div class="card mb-4 shadow-sm">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">A rest API</h4>
+                    <h4 class="my-0 font-weight-normal">A rest api</h4>
                 </div>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"><small class="text-muted">Some -http basic auth- rest crud</small></h1>
