--- a/complete/src/main/resources/templates/books.html
+++ b/complete/src/main/resources/templates/books.html
@@ -1,30 +1,37 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-    <header th:insert="general.html :: headerfiles"> </header>
-    <body>
-        <header th:insert="general.html :: header"> </header>
-        <h2>Book list</h2>
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Genre</th>
-                </tr>
-            </thead>
-            <tbody>
-            <tr th:each="book: ${books}">
-                <td th:text="${book.id}"/>
-                <td>
-                    <a th:href="@{'/books/' + ${book.id}}" th:text="${book.name}"></a>
-                </td>
-                <td>
-                    <a th:href="@{'/genre/' + ${book.genre.id}}" th:text="${book.genre.name}"></a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <p>Tenim  <span th:text="${#lists.size(books)}"/> llibres</p>
-        <header th:insert="general.html :: footer"> </header>
-    </body>
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="/general.html :: head"></head>
+
+<body>
+<nav th:replace="/general.html :: header-menu"></nav>
+
+<main role="main" class="container">
+
+    <h2 th:text="'We have ' + ${#lists.size(books)} + ' books'"></h2>
+
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Genre</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="book: ${books}">
+            <td th:text="${book.id}"/>
+            <td>
+                <a th:href="@{'/books/' + ${book.id}}" th:text="${book.name}"></a>
+            </td>
+            <td>
+                <a th:href="@{'/genre/' + ${book.genre.id}}" th:text="${book.genre.name}"></a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+</main><!-- /.container -->
+<nav th:replace="/general.html :: footer"></nav>
+</body>
 </html>
