--- a/complete/src/main/resources/templates/login.html
+++ b/complete/src/main/resources/templates/login.html
@@ -1,17 +1,24 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Login page</title>
-</head>
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="/general.html :: head"></head>
+
 <body>
-<h1>Login page</h1>
-<p th:if="${loginError}" class="error">Wrong user or password</p>
-<form th:action="@{/login}" method="post">
-    <label for="username">Username</label>:
-    <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
-    <label for="password">Password</label>:
-    <input type="password" id="password" name="password" /> <br />
-    <input type="submit" value="Log in" />
-</form>
+<nav th:replace="/general.html :: header-menu"></nav>
+
+<main role="main" class="container">
+
+    <h2>Login</h2>
+    <p th:if="${loginError}" class="error">Wrong user or password</p>
+    <form th:action="@{/login}" method="post">
+        <label for="username">Username</label>:
+        <input type="text" id="username" name="username" autofocus="autofocus" class="form-control"/> <br />
+        <label for="password">Password</label>:
+        <input type="password" id="password" name="password" class="form-control"/> <br />
+        <input type="submit" value="Log in" class="btn btn-lg btn-block btn-primary" />
+    </form>
+
+</main><!-- /.container -->
+<nav th:replace="/general.html :: footer"></nav>
 </body>
 </html>
