--- a/complete/src/main/resources/templates/index.html
+++ b/complete/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 
     <div class="starter-template">
         <h1>springboot starter template app</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> This is a basic app with customers, books and genres entities.</p>
+        <p class="lead">Use this template as a way to quickly start any new project.<br> This is a basic app with customers, books and genres entities.</p>
 
         <div class="card-deck mb-3 text-center">
             <div class="card mb-4 shadow-sm">
