hem afegit la propietat
server:
  servlet:
    context-path: /demoapp

--- a/complete/src/main/resources/templates/about.html
+++ b/complete/src/main/resources/templates/about.html
@@ -27,6 +27,7 @@
         <li>Some views and forms with thymeleaf ... and form-bean mapping in the controller ... and validation and binding results ...</li>
         <li>Data caching with @Cache annotation</li>
         <li>Basic spring security config: login form for the web app + testing for the web app (authenticated part / unauthenticated part), http basic auth for the rest controllers + testing for the authenticated rest controllers</li>
+        <li>Some scheduled tasks (@Schedule)</li>
     </ul>
 
 
