--- a/complete/src/main/resources/templates/index.html
+++ b/complete/src/main/resources/templates/index.html
@@ -20,11 +20,11 @@
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"><small class="text-muted">Some web pages and forms...</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>The <a href="/about">about</a> page</li>
-                        <li>The <a href="/books/">book list</a> here</li>
-                        <li>Or you can create <a href="/books/new">new book</a> or <a href="/genres/new">new genre</a></li>
+                        <li>The <a href="about">about</a> page</li>
+                        <li>The <a href="books/">book list</a> here</li>
+                        <li>Or you can create <a href="books/new">new book</a> or <a href="genres/new">new genre</a></li>
                     </ul>
-                    <a class="btn btn-lg btn-block btn-primary" href="/login" role="button">Login here</a>
+                    <a class="btn btn-lg btn-block btn-primary" href="login" role="button">Login here</a>
 
                 </div>
             </div>
@@ -35,12 +35,12 @@
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"><small class="text-muted">Some -http basic auth- rest crud</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>List genres: <a href="/rest/genres/">genres</a></li>
-                        <li>Get a specific genre: <a href="/rest/genres/7">generes/7</a></li>
-                        <li>Get a specific book: <a href="/rest/books/11">books/11</a></li>
-                        <li>List books by genre: <a href="/rest/books/genre/Scy-fi">books/genre/Scy-fi</a></li>
-                        <li>List customers: <a href="/rest/customers/">customers</a></li>
-                        <li>Get a specific customer: <a href="/rest/customers/1">customers/1</a></li>
+                        <li>List genres: <a href="rest/genres/">genres</a></li>
+                        <li>Get a specific genre: <a href="rest/genres/7">generes/7</a></li>
+                        <li>Get a specific book: <a href="rest/books/11">books/11</a></li>
+                        <li>List books by genre: <a href="rest/books/genre/Scy-fi">books/genre/Scy-fi</a></li>
+                        <li>List customers: <a href="rest/customers/">customers</a></li>
+                        <li>Get a specific customer: <a href="rest/customers/1">customers/1</a></li>
                     </ul>
                 </div>
             </div>
@@ -51,9 +51,9 @@
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"><small class="text-muted">Insert first some random data</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Insert data: <a href="/rest/admin/insertData/">insertData</a></li>
-                        <li>See the data: <a href="/rest/admin/retrieveData/">retrieveData</a></li>
-                        <li>Delete all data: <a href="/rest/admin/deleteData/">deleteData</a></li>
+                        <li>Insert data: <a href="rest/admin/insertData/">insertData</a></li>
+                        <li>See the data: <a href="rest/admin/retrieveData/">retrieveData</a></li>
+                        <li>Delete all data: <a href="rest/admin/deleteData/">deleteData</a></li>
                     </ul>
                 </div>
             </div>
