--- a/complete/src/main/resources/templates/login.html
+++ b/complete/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 
     <h2>Login</h2>
     <p th:if="${loginError}" class="error">Wrong user or password</p>
-    <form th:action="@{/login}" method="post">
+    <form th:action="@{login}" method="post">
         <label for="username">Username</label>:
         <input type="text" id="username" name="username" autofocus="autofocus" class="form-control"/> <br />
         <label for="password">Password</label>:
