Afegit un data.sql per inicialitzar dades

--- a/complete/src/main/resources/templates/general.html
+++ b/complete/src/main/resources/templates/general.html
@@ -89,7 +89,7 @@
     </main><!-- /.container -->
 
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark" th:fragment="footer">
-        <a class="navbar-brand" href="#"> mbatet. No rights reserved. This is to illustrate how fragments work.</a>
+        <a class="navbar-brand" href="#">No rights reserved. </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
