--- a/complete/src/main/resources/templates/index.html
+++ b/complete/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <main role="main" class="container">
 
     <div class="starter-template">
-        <h1>demoapp: springboot starter template app</h1>
+        <h1 th:text="${appName}"></h1>
         <p class="lead">Use this template as a way to quickly start any new project.<br> This is a basic app with customers, books and genres entities.</p>
 
         <div class="card-deck mb-3 text-center">
